2007-12-03  Moritz Borgmann  <octave@moriborg.de>

	* Makeconf.in, aclocal.m4, configure.in: Check for find program,
	preferably gfind (on non-GNU systems).  Need a sane find for
	run-octave script.
	* run-octave.in: Use FIND and AWK as determined by configure.

2007-12-03  John W. Eaton  <jwe@octave.org>

	* configure.in: If available, include <sys/types.h> in test for
	sigset_t and sig_atomic_t.

2007-11-30  Moritz Borgmann  <octave@moriborg.de>

	* configure.in: Also check for sunmath.h.

2007-11-26  David Bateman  <dbateman@free.fr>

	* PROJECTS: condest now implemented.

	* NEWS: Document the TeX interpreter mode and its limitations with
	gnuplot 4.0.

	* NEWS: Document the use of "colormap gmap40" to workaround some
	gnuplot 4.0 colormap issues.

2007-11-14  John W. Eaton  <jwe@octave.org>

	* configure.in: Don't create Makefrag.bsd.

2007-11-14  Joseph P. Skudlarek  <Jskud@Jskud.com>

	* configure.in: Rework pcre.h tests to work with autoconf 2.59,
	and avoid explicit pcre/pcre.h check by using pcre-config.

2007-11-13  Joseph P. Skudlarek  <Jskud@Jskud.com>

	* octave-bug.in: Try mailx, then Mail, then /usr/ucb/mail, then
	/bin/mail.
 
2007-11-13  John W. Eaton  <jwe@octave.org>

	* configure.in: Only define HAVE_PCRE_H if <pcre.h> has the
	definitions we need.  Likewise for <pcre/pcre.h>.

2007-11-10  John W. Eaton  <jwe@octave.org>

	* configure.in: Delete AC_SUBST_FILE(f77_rules_frag).

2007-11-07  John W. Eaton  <jwe@octave.org>

	* configure.in: Also check for pcre/pcre.h.

2007-11-01  John W. Eaton  <jwe@octave.org>

	* configure.in: Delete BLAS library calling convention
	compatibility check.

2007-10-31  John W. Eaton  <jwe@octave.org>

	* README.binary-dist: Delete.

	* README.MachTen: Delete.
	* octMakefile.in (DISTFILES): Remove it from the list.

2007-10-30  David Bateman  <dbateman@free.fr>

	* examples/addtwomatrices.cc, examples/celldemo.cc,
	examples/firstmexdemo.c, examples/fortdemo.cc, examples/fortsub.f,