@@ -29,7 +29,7 @@ EXTERN_CFLAGS="$CFLAGS"
 EXTERN_CXXFLAGS="$CXXFLAGS"
 
 AC_INIT
-AC_REVISION($Revision: 1.599 $)
+AC_REVISION($Revision: 1.600 $)
 AC_PREREQ(2.57)
 AC_CONFIG_SRCDIR([src/octave.cc])
 AC_CONFIG_HEADER(config.h)
@@ -939,7 +939,6 @@ AC_ARG_ENABLE(rpath,
       else enable_rpath_arg="$enableval"; fi
     fi], [use_rpath=true])
 
-DLFCN_DIR=
 CPICFLAG=-fPIC
 CXXPICFLAG=-fPIC
 FPICFLAG=-fPIC
@@ -1050,7 +1049,6 @@ case "$canonical_host_type" in
     CPICFLAG=
     CXXPICFLAG=
     FPICFLAG=
-    DLFCN_DIR=dlfcn
   ;;
   hppa*-hp-hpux*)
     if test "$ac_cv_f77_compiler_gnu" = yes; then
@@ -1126,7 +1124,6 @@ AC_MSG_NOTICE([defining SHLLIB_VER to be $SHLLIB_VER])
 AC_MSG_NOTICE([defining SHLBIN_VER to be $SHLBIN_VER])
 AC_MSG_NOTICE([defining SHLLINKEXT to be $SHLLINKEXT])
 AC_MSG_NOTICE([defining LIBPRE to be $LIBPRE])
-AC_MSG_NOTICE([defining DLFCN_DIR to be $DLFCN_DIR])
 AC_MSG_NOTICE([defining SH_LD to be $SH_LD])
 AC_MSG_NOTICE([defining SH_LDFLAGS to be $SH_LDFLAGS])
 AC_MSG_NOTICE([defining DL_LD to be $DL_LD])
@@ -1152,7 +1149,6 @@ AC_SUBST(SHLLIB_VER)
 AC_SUBST(SHLBIN_VER)
 AC_SUBST(SHLLINKEXT)
 AC_SUBST(LIBPRE)
-AC_SUBST(DLFCN_DIR)
 AC_SUBST(SH_LD)
 AC_SUBST(SH_LDFLAGS)
 AC_SUBST(DL_LD)
@@ -1344,8 +1340,6 @@ esac
 ### libs and some API for dynamic linking is detected.
 
 LD_CXX='$(CXX)'
-LIBDLFCN=
-DLFCN_INCFLAGS=
 RDYNAMIC_FLAG=
 DL_API_MSG=""
 dlopen_api=false
@@ -1381,11 +1375,6 @@ if $SHARED_LIBS || $ENABLE_DYNAMIC_LINKING; then
           dlopen_api=true
         else
 	  case "$canonical_host_type" in
-	    rs6000-ibm-aix* | powerpc-ibm-aix*)
-	      LIBDLFCN="-ldlfcn -ll -lld"
-	      DLFCN_INCFLAGS='-I$(top_srcdir)/dlfcn -I$(TOPDIR)/dlfcn'
-	      dlopen_api=true
-	    ;;
 	    i[[3456]]86-*-sco3.2v5*)
 	      LD_CXX='LD_RUN_PATH=$LD_RUN_PATH:$(octlibdir) $(CXX)'
 	      dlopen_api=true
@@ -1439,8 +1428,6 @@ else
 fi
 
 AC_SUBST(LD_CXX)
-AC_SUBST(LIBDLFCN)
-AC_SUBST(DLFCN_INCFLAGS)
 AC_SUBST(RDYNAMIC_FLAG)
 AC_SUBST(ENABLE_DYNAMIC_LINKING)
 AC_SUBST(LIBOCTINTERP)
@@ -1832,19 +1819,19 @@ typedef int sig_atomic_t;
 
 ### Do the substitutions in all the Makefiles.
 
-AC_CONFIG_FILES([Makefile octMakefile Makeconf test/Makefile \
-  dlfcn/Makefile doc/Makefile doc/faq/Makefile doc/interpreter/Makefile 
-  doc/liboctave/Makefile doc/refcard/Makefile emacs/Makefile \
-  examples/Makefile liboctave/Makefile liboctave/oct-types.h \
-  src/Makefile src/mxarray.h libcruft/Makefile libcruft/Makerules \
-  libcruft/amos/Makefile libcruft/blas/Makefile \
-  libcruft/daspk/Makefile libcruft/dasrt/Makefile 
-  libcruft/dassl/Makefile libcruft/fftpack/Makefile \
-  libcruft/lapack/Makefile libcruft/minpack/Makefile \
-  libcruft/misc/Makefile libcruft/odepack/Makefile \
-  libcruft/ordered-qz/Makefile libcruft/quadpack/Makefile \
-  libcruft/ranlib/Makefile libcruft/slatec-fn/Makefile \
-  libcruft/slatec-err/Makefile libcruft/villad/Makefile \
+AC_CONFIG_FILES([Makefile octMakefile Makeconf test/Makefile
+  doc/Makefile doc/faq/Makefile doc/interpreter/Makefile
+  doc/liboctave/Makefile doc/refcard/Makefile emacs/Makefile
+  examples/Makefile liboctave/Makefile liboctave/oct-types.h
+  src/Makefile src/mxarray.h libcruft/Makefile libcruft/Makerules
+  libcruft/amos/Makefile libcruft/blas/Makefile
+  libcruft/daspk/Makefile libcruft/dasrt/Makefile
+  libcruft/dassl/Makefile libcruft/fftpack/Makefile
+  libcruft/lapack/Makefile libcruft/minpack/Makefile
+  libcruft/misc/Makefile libcruft/odepack/Makefile
+  libcruft/ordered-qz/Makefile libcruft/quadpack/Makefile
+  libcruft/ranlib/Makefile libcruft/slatec-fn/Makefile
+  libcruft/slatec-err/Makefile libcruft/villad/Makefile
   libcruft/blas-xtra/Makefile libcruft/lapack-xtra/Makefile])
 AC_OUTPUT
 
