@@ -56,7 +56,6 @@ BLAS_LIBS=%OCTAVE_CONF_BLAS_LIBS%
 FFTW_LIBS=%OCTAVE_CONF_FFTW_LIBS%
 LEXLIB=%OCTAVE_CONF_LEXLIB%
 LIBGLOB=%OCTAVE_CONF_LIBGLOB%
-LIBDLFCN=%OCTAVE_CONF_LIBDLFCN%
 DEFS=%OCTAVE_CONF_DEFS%
 
 : ${USER=$LOGNAME}
@@ -251,7 +250,6 @@ BLAS_LIBS:        $BLAS_LIBS
 FFTW_LIBS:        $FFTW_LIBS
 LIBS:             $LIBS
 LEXLIB:           $LEXLIB
-LIBDLFCN:         $LIBDLFCN
 LIBGLOB:          $LIBGLOB
 SED:              $SED
 DEFS:
